src/main/java/com/example/demo3/_core/errors/Exception404.java
package com.example.demo3._core.errors;

public class Exception404 extends RuntimeException{

    public Exception404(String msg) {
        super(msg);
    }
}
